--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
@@ -36,6 +37,11 @@ configurations {
 
 dependencies {
 
+//    compile ("javax.persistence:persistence-api")
+
+    compile("org.apache.commons:commons-lang3:3.3.2")
+    compile("commons-io:commons-io:2.4")
+
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-tomcat")
     compile("org.springframework.boot:spring-boot-starter-actuator")
@@ -43,13 +49,21 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-test")
     compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.data:spring-data-rest-webmvc")
-//    compile("org.springframework.security.oauth:spring-security-oauth2:2.0.0.RC2")
+    compile("org.springframework.security.oauth:spring-security-oauth2")
 //    compile("org.springframework.security.oauth:spring-security-oauth2-javaconfig:1.0.0.M1")
 
-    compile("org.hsqldb:hsqldb")
+    compile ("mysql:mysql-connector-java")
+
+    compile ("com.squareup.retrofit:retrofit:1.9.0")
+    compile ("com.squareup.okhttp:okhttp:2.5.0")
+    compile 'com.squareup.retrofit:converter-jackson:1.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
 
     testCompile("junit:junit")
+
+
 }
 
 dependencyManagement {
